2.5.4 (20.06.2019):

* Fix bug applying paper whilst setting profile
* Update to Hungarian translation (thanks to csola)


2.5.3 (20.05.2019):

* Split up messages from gimp and unpaper to allow them to be ignored more
  easily. Closes bug #321
  (Error messages when returning from editing a scanned document using gimp)
* Trap invalid dates in metadata.
  Closes bug #323 (Crash when saving with invalid date)
* Use GTK's FontChooserDialog for selecting font for OCR output in PDF
* Moved font discovery to program start to accelerate display of save dialog
* Removed owner password, as it does not encrypt.
* Don't reset to defaults if no scan options set. Closes bug #324 (Changing scan
  resolution from the default 100 ppi to 200 ppi creates invalid syntax for sane
  parameters)
* Update to German translation (thanks to Stephan Woidowski)
* Update to Italian translation (thanks to Albano Battistella)
* Update to Ukranian translation (thanks to Yuri Chornoivan)


2.5.2 (22.04.2019):

* Allow translations for message types in multiple message window
* Improve progress message whilst analysing pages
* Don't reapply scan options after reload if setting returned SANE_INFO_INEXACT
* Decode UTF-8 in font names for PDFs in save dialog
* Wait for processes to finish to prevent zombies. Closes Debian bug #926634
  (Delays opening dialogs, possibly related to defunct fc-list process)
* Fix warning message about pdftk (again).
  Closes bug #320 (Error message on startup: pdftk can't use /tmp)
* Rename dpi->ppi (again) and us->μs
* Update to Hungarian translation (thanks to csola)
* Update to Czech translation (thanks to Pavel Borecki)


2.5.1 (23.03.2019):

* Fix warning message about pdftk
* Update to Hungarian translation (thanks to csola)


2.5.0 (22.03.2019):

* Really optionally change the djvu access and modification times to the
  metadata date.
* Optionally encrypt PDFs.
* Fix race condition when cancelling job.
  Closes bug #317 (cancel tests randomly hang)